--- a/index.html
+++ b/index.html
@@ -238,11 +238,11 @@ function setItem2() {
 
 /* 🔄 BILDWECHSEL */
 function updateProduct1Image() {
-  product1Image.src = `case_${model1.value}_${color1.value}.jpg`;
+  product1Image.src = `case_${model1.value}_${color1.value}.jpg.JPG`;
 }
 
 function updateProduct2Image() {
-  product2Image.src = `airpods_${model2.value}_${color2.value}.jpg`;
+  product2Image.src = `airpods_${model2.value}_${color2.value}.jpg.JPG`;
 }
 
 color1.addEventListener("change", updateProduct1Image);
