--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ footer a { color: #fff; }
 
 <!-- PRODUKT 1 -->
 <div class="product">
-<img id="product1Image" src="case_iphone11_schwarz.jpg">
+<img id="product1Image" src="case_iphone11_schwarz.jpg.JPG">
 
 <h2>MagSafe Handyhülle</h2>
 <p class="price">8,99 €</p>
@@ -159,7 +159,7 @@ footer a { color: #fff; }
 
 <!-- PRODUKT 2 -->
 <div class="product">
-<img id="product2Image" src="airpods_airpods1_schwarz.jpg">
+<img id="product2Image" src="airpods_airpods1_schwarz.jpg.JPG">
 
 <h2>AirPods Case</h2>
 <p class="price">9,99 €</p>
