--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ footer a { color: #fff; }
 
 <!-- PRODUKT 1 -->
 <div class="product">
-<img id="product1Image" src="case_iphone11_schwarz.jpg.JPG">
+<img id="product1Image" src="case_iphone11_schwarz.jpg.PNG">
 
 <h2>MagSafe Handyhülle</h2>
 <p class="price">8,99 €</p>
