--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ function setItem2() {
 
 /* 🔄 BILDWECHSEL */
 function updateProduct1Image() {
-  product1Image.src = `case_${model1.value}_${color1.value}.jpg.JPG`;
+  product1Image.src = `case_${model1.value}_${color1.value}.jpg.PNG`;
 }
 
 function updateProduct2Image() {
