--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@ footer a { color: #fff; }
       <option value="grün">Grün</option>
       <option value="blau">Blau</option>
       <option value="rot">Rot</option>
+      <option value="grau">Grau</option>
     </select>
   </div>
 
