--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ footer a { color: #fff; }
     <select id="color1">
       <option value="schwarz">Schwarz</option>
       <option value="pink">Pink</option>
-      <option value="grün">Grün</option>
+      <option value="grun">Grün</option>
       <option value="blau">Blau</option>
       <option value="rot">Rot</option>
       <option value="grau">Grau</option>
